cluster/apps/sample-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app
  namespace: kloud-apps
spec:
  type: LoadBalancer
  selector:
    app: sample-app
  ports:
    - port: 80
      targetPort: 8080
